Two new pages, responsive images changes and tweaks

--- a/pages/asteroid-belt.html
+++ b/pages/asteroid-belt.html
@@ -19,7 +19,7 @@ link: asteroid-belt
                     Three years after their first congress, in 1801, Giuseppe Piazzi discovered <a href="ceres.html">Ceres</a> at the observatory in Palermo.
                 </p>
                 <p class="paragraph">
-                    After other members of the "celestial police" discovered other "planets" like Pallas, Juno, and <a href="vesta.html">Vesta</a>, they started to suspect that they were not planets, but a new class of objects.
+                    After other members of the "celestial police" discovered other "planets" like <a href="pallas.html">Pallas</a>, Juno, and <a href="vesta.html">Vesta</a>, they started to suspect that they were not planets, but a new class of objects.
                     Herschel suggested the term "asteroid" (star-like), since their apparent sizes were smaller than those of stars.
                     Titius-Bode law was later disproven by the discovery of <a href="neptune.html">Neptune</a>.
                 </p>
@@ -37,7 +37,7 @@ link: asteroid-belt
                 </p>
                 <p class="paragraph">
                     The outer main belt is the region outside the 5:2 orbital resonance.
-                    The largest members are Hygiea, Interamnia, and Europa.
+                    The largest members are <a href="hygiea.html">Hygiea</a>, Interamnia, and Europa.
                 </p>
                 <p class="paragraph">
                     There are also a few groups within the belt that are resonant with Jupiter, notably the Alinda and Griqua groups.
@@ -50,16 +50,16 @@ link: asteroid-belt
                             <th>Name</th><th>Diameter</th><th>Discovery Year</th><th>Discoverer</th><th>Class</th>
                         </tr>
                         <tr>
-                            <th>1 Ceres</th><th>939.4±0.2</th><th>1801</th><th>Piazzi, G.</th><th>G</th>
+                            <th><a href="ceres.html">1 Ceres</a></th><th>939.4±0.2</th><th>1801</th><th>Piazzi, G.</th><th>G</th>
                         </tr>
                         <tr>
-                            <th>4 Vesta</th><th>525.4±0.2</th><th>1807</th><th>Olbers, H. W.</th><th>V</th>
+                            <th><a href="vesta.html">4 Vesta</a></th><th>525.4±0.2</th><th>1807</th><th>Olbers, H. W.</th><th>V</th>
                         </tr>
                         <tr>
-                            <th>2 Pallas</th><th>511±4</th><th>1802</th><th>Olbers, H. W.</th><th>B</th>
+                            <th><a href="pallas.html">2 Pallas</a></th><th>511±4</th><th>1802</th><th>Olbers, H. W.</th><th>B</th>
                         </tr>
                         <tr>
-                            <th>10 Hygiea</th><th>433±8</th><th>1849</th><th>de Gasparis, A.</th><th>C</th>
+                            <th><a href="hygiea.html">10 Hygiea</a></th><th>433±8</th><th>1849</th><th>de Gasparis, A.</th><th>C</th>
                         </tr>
                         <tr>
                             <th>704 Interamnia</th><th>332±5</th><th>1910</th><th>Cerulli, V.</th><th>F</th>
@@ -117,6 +117,7 @@ link: asteroid-belt
                         <p class="caption">Pallas. <a href="https://commons.wikimedia.org/wiki/File:Potw1749a_Pallas_crop.png">Source</a></p>
                     </div>
                     <h3 class="paragraphsubheader" id="Pallas">Pallas</h3>
+                    <p class="readmore">Main article: <a href="pallas.html">Pallas</a></p>
                     <p class="paragraph">
                         Pallas is the third biggest asteroid in the asteroid belt and the second to be discovered after Ceres.
                         It is named after another name for Athens, the Greek goddess of war.
@@ -131,6 +132,7 @@ link: asteroid-belt
                         <p class="caption">Hygiea. <a href="https://commons.wikimedia.org/wiki/File:SPHERE_image_of_Hygiea.jpg">Source</a></p>
                     </div>
                     <h3 class="paragraphsubheader" id="Hygiea">Hygiea</h3>
+                    <p class="readmore">Main article: <a href="hygiea.html">Hygiea</a></p>
                     <p class="paragraph">
                         Hygiea is the fourth biggest asteroid in the asteroid belt.
                         It is named after the Greek goddess of health and medicine.
