--- a/pages/asteroid.html
+++ b/pages/asteroid.html
@@ -13,7 +13,7 @@ link: asteroid
                 <p class="paragraph">
                     An asteroid is a minor planet that is within, or shares the orbits of <a href="jupiter.html">Jupiter</a>.
                     Asteroids consist of materials like carbonates, silicates, and metals, and have less ice than minor planets beyond Jupiter, like <a href="centaur.html">centaurs</a>, or <a href="tno.html">trans-neptunian objects</a>.
-                    The biggest concentration of asteroids is the <a href="asteroid-belt.html">asteroid belt</a> between <a href="mars.html">Mars</a> and Jupiter, where the biggest asteroids like <a href="ceres.html">Ceres</a>, <a href="vesta.html">Vesta</a>, Pallas, and Hygiea are located.
+                    The biggest concentration of asteroids is the <a href="asteroid-belt.html">asteroid belt</a> between <a href="mars.html">Mars</a> and Jupiter, where the biggest asteroids like <a href="ceres.html">Ceres</a>, <a href="vesta.html">Vesta</a>, <a href="pallas.html">Pallas</a>, and <a href="hygiea.html">Hygiea</a> are located.
                     Multiple missions were sent to asteroids for a number of reasons, including more general missions to study them from a distance, sample returns, and even asteroid deflection.
                 </p>
                 <h2 class="paragraphheader" id="DiscoveryOfAsteroids">Discovery of asteroids</h2>
