--- a/pages/ceres.html
+++ b/pages/ceres.html
@@ -6,14 +6,14 @@ link: ceres
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres" width="245" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/asteroids/ceres.jpg" alt="Ceres">
                         <p class="caption">Ceres</p>
                     </div>
                     <p class="paragraph">
                         Ceres is the biggest of the <a href="asteroid.html">asteroids</a> in the <a href="asteroid-belt.html">asteroid belt</a> and is the only <a href="dwarf-planet.html">dwarf planet</a> in the belt. 
                         It is named after the Roman goddess of agriculture and fertility. 
-                        It was discovered in 1801 and was thought to be a <a href="planet.html">planet</a>, before other smaller bodies like Pallas, Juno, and <a href="vesta.html">Vesta</a> were discovered.
+                        It was discovered in 1801 and was thought to be a <a href="planet.html">planet</a>, before other smaller bodies like <a href="pallas.html">Pallas</a>, Juno, and <a href="vesta.html">Vesta</a> were discovered.
                         The surface of the asteroid consists of ice and carbonates. 
                         Cryovolcanic activity shapes the surface of the dwarf planet, thanks to which many bright spots in craters and a single cryovolcanic mountain (Ahuna Mons) exist.
                     </p>
@@ -65,8 +65,8 @@ link: ceres
                     Out of the dwarf planets recognized by IAU, it is the smallest.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:242px">
-                        <img class="articleimage" src="../assets/images/features/occator-crater.jpg" alt="Ahuna Mons" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/features/occator-crater.jpg" alt="Occator crater">
                         <p class="caption">Occator crater. The two bright spots in the middle and on the side are Cerealia and Vinalia Faculae. The spots contain salt evaporates.</p>
                     </div>
                     <h3 class="paragraphsubheader" id="InternalStructure">Internal structure</h3>
@@ -91,8 +91,8 @@ link: ceres
                         Several other bright spots exist like Haulani Facula and Oxo crater.
                         Oxo is bright because of ice that was brought externally and is in the process of sublimating.
                     </p>
-                    <div class="captionbox right" style="width:242px">
-                        <img class="articleimage" src="../assets/images/features/ahuna-mons.jpg" alt="Ahuna Mons" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/features/ahuna-mons.jpg" alt="Ahuna Mons">
                         <p class="caption">Ahuna Mons, a cryovolcano and the tallest mountain on Ceres. North of it lies an unnamed crater.</p>
                     </div>
                     <p class="paragraph">
