--- a/pages/dwarf-planet.html
+++ b/pages/dwarf-planet.html
@@ -12,7 +12,7 @@ link: dwarf-planet
                 <p class="paragraph">
                     The number of known dwarf planets is not agreed upon, as there are multiple methods of  measuring  the roundness of objects.
                     According to the IAU and NASA, there are five confirmed dwarf planets in our solar system: <a href="pluto.html">Pluto</a>, <a href="eris.html">Eris</a>, <a href="haumea.html">Haumea</a>, <a href="makemake.html">Makemake</a>, and <a href="ceres.html">Ceres</a>.
-                    Other objects considered dwarf planets by some are <a href="gonggong.html">Gonggong</a>, <a href="quaoar.html">Quaoar</a>, <a href="sedna.html">Sedna</a>, <a href="orcus.html">Orcus</a>, Salacia and many more.
+                    Other objects considered dwarf planets by some are <a href="gonggong.html">Gonggong</a>, <a href="quaoar.html">Quaoar</a>, <a href="sedna.html">Sedna</a>, <a href="orcus.html">Orcus</a>, <a href="salacia.html">Salacia</a> and many more.
                 </p>
                 <p class="paragraph">
                     Pluto is the biggest dwarf planet.
@@ -59,7 +59,7 @@ link: dwarf-planet
                     Of the five official dwarf planets, only Ceres and Pluto were visited by spacecrafts.
                     The largest asteroids have been observed from <a href="earth.html">Earth</a> and none (apart from Ceres) are round.
                     <a href="vesta.html">Vesta</a> has been in hydrostatic equilibrium and has differentiated interior, but lost its round form after a collision event.
-                    Pallas and Hygiea are also close to round shapes. 
+                    <a href="pallas.html">Pallas</a> and <a href="hygiea.html">Hygiea</a> are also close to round shapes. 
                     This rules out any other dwarf planets in the asteroid belt.
                 </p>
                 <p class="paragraph">
@@ -111,7 +111,7 @@ link: dwarf-planet
                             <th><a href="orcus.html">Orcus</a></th><th>910</th><th>Nearly certainly</th><th>plutino</th>
                         </tr>
                         <tr>
-                            <th>Salacia</th><th>866</th><th>Nearly certainly</th><th>classical</th>
+                            <th><a href="salacia.html">Salacia</a></th><th>866</th><th>Nearly certainly</th><th>classical</th>
                         </tr>
                         <tr>
                             <th>Máni</th><th>796</th><th>Nearly certainly</th><th>classical</th>
@@ -306,6 +306,7 @@ link: dwarf-planet
                     It has one known moon - Vanth.
                 </p>
                 <h3 class="paragraphsubheader" id="Salacia">Salacia</h3>
+                <p class="readmore">Main article: <a href="salacia.html">Salacia</a></p>
                 <p class="paragraph">
                     Salacia is a TNO and a likely dwarf planet.
                     It is named after the Roman goddess of salt water.
