--- a/pages/ganymede.html
+++ b/pages/ganymede.html
@@ -6,8 +6,8 @@ link: ganymede
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede">
                         <p class="caption">Ganymede</p>
                     </div>
                     <p class="paragraph">
@@ -18,7 +18,8 @@ link: ganymede
                     </p>
                     <p class="paragraph">
                         The Hubble Space Telescope has discovered evidence for underground saltwater ocean, potentially the biggest in the Solar System.
-                        It has a magnetic field, the only satellite known to have such.
+                        The surface is covered with craters and features numerous darker regions of older terrain.
+                        It also has a magnetic field, the only satellite known to have such.
                         The magnetic field is likely affected by the interior ocean.
                         The ongoing ESA mission JUICE is planned to orbit Ganymede and study the satellite.
                     </p>
@@ -69,30 +70,43 @@ link: ganymede
                     Ganymede has a liquid iron-nickel core that provides a magnetosphere.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:231px">
-                        <img class="articleimage" src="../assets/images/features/tros-crater.png" alt="Tros crater" width="229" height="240">
-                        <p class="caption">Tros crater, one of the more prominent craters on Ganymede</p>
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/features/tros-crater.png" alt="Tros crater">
+                        <p class="caption">Tros crater, one of the more prominent features on Ganymede</p>
                     </div>
                     <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
                     <p class="paragraph">
-                        The surface of Ganymede is mostly ice, though other substances were detected like carbon dioxide and sulfur dioxide, as well as sulfates of magnesium and sodium.
+                        The surface of Ganymede consists of mostly water ice. 
+                        Other substances were detected in lower amounts like carbon dioxide and sulfur dioxide, as well as clay minerals, organic compounds, and traces of sulfates of magnesium and sodium.
+                    </p>
+                    <p class="paragraph">
                         There are surfaces with higher and lower albedo, the lighter parts are concentrated mostly in the leading hemisphere.
                         The darker parts are older and are more heavily cratered.
                         The biggest such dark plain is the Galileo Regio.
+                        A smaller, but more recognisable one is Perrine Regio, which is isolated by wide lighter regions like Phrygia and Xibalba Sulci.
+                        Lighter regions are marked by ridges, which are not yet fully explained.
+                        One possibility is that they are tectonic in nature and likely a result of a period of more prominent tidal heating.
+                        
                     </p>
                     <p class="paragraph">
                         Since craters are much more prominent on the darker plains of Ganymede, it has been suggested that it has experienced heavy cratering 3.5 to 4 billion years ago.
-                        Some have been slowly erased by the ice crust, leaving only a remnant known as a palimpsest.
-                        There are also more recent craters that have left rays of ejecta (like the Tros and Cisti craters).
-                        The Ganymedian surface also features grooves, which are yet unexplained.
-                        One possibility is that they are tectonic in nature and likely a result of a period of more prominent tidal heating.
+                        Some have been slowly erased by the soft ice crust, leaving only a remnant known as a palimpsest.
+                        Epigeus, the largest impact crater on Ganymede, is an example of a young palimpsest.
+                        Several spots like Busiris and Memphis Faculae have formed during the earliest years of Ganymede and have completely been smoothened.
+                        There are also more recent craters that have left rays of ejecta (like the Gilgamesh, Tashmetum, Tros, and Cisti craters).
+                        Gilgamesh is the most prominent of the newer craters, as it has created a vast basin surrounding it.
                     </p>
                 </div>
                 <h3 class="paragraphheader" id="AtmosphereAndMagnetosphere">Atmosphere and magnetosphere</h3>
                 <p class="paragraph">
                     Ganymede has a thin athmosphere, consisting of oxygen (including atomic oxygen and some ozone), with minor hydrogen and water vapor contents.
                     It is also the only moon that has its own magnetosphere, independent from that of Jupiter.
-                    The radiation levels on the surface are high, ranging between 50 - 80 mSv, but still lower than those on Europa.
+                    Its magnetic moment is three times that of Mercury.
+                    The interaction between the magnetic fields of Jupiter and Ganymede are similar to those between the <a href="sun.html">Sun</a> and <a href="earth.html">Earth</a>.
+                    A key difference is the subsonic speed of plasma flow, which does not create bow shocks off the trailing hemisphere of Ganymede.
+                </p>
+                <p class="paragraph">
+                    The radiation levels on the surface of Ganymede are high, ranging between 50 - 80 mSv, but still lower than those on Europa.
                 </p>
                 <h2 class="paragraphheader" id="Exploration">Exploration</h2>
                 <p class="paragraph">
