--- a/pages/natural-satellite.html
+++ b/pages/natural-satellite.html
@@ -101,7 +101,7 @@ link: natural-satellite
                 <p class="paragraph">
                     There are 274 moons known to orbit <a href="saturn.html">Saturn</a>. 
                     The ones discovered earlier were named after Titans and Giants from Greek mythology. 
-                    Irregular moons were named after Celtic and Inuit gods and Norse ice giants (except Phoebe).
+                    Irregular moons were named after Celtic and Inuit gods and Norse ice giants (except <a href="phoebe.html">Phoebe</a>).
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right h240">
@@ -197,9 +197,9 @@ link: natural-satellite
                         Names originate from Greek mythology and are related to the underworld. 
                         The biggest moon - Charon, named after the ferryman of the underworld, is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
                     </p>
-                    <p class="paragraph">Eris has one moon - <a href="dysnomia.html">Dysnomia</a>, named after the daemon of lawlessness in Greek mythology.</p>
-                    <p class="paragraph">Haumea has two satellites - Hiʻiaka and Namaka, both named after Hawaiian deities.</p>
-                    <p class="paragraph">Makemake has one satellite, refered to as MK2.</p>
+                    <p class="paragraph"><a href="eris.html">Eris</a> has one moon - <a href="dysnomia.html">Dysnomia</a>, named after the daemon of lawlessness in Greek mythology.</p>
+                    <p class="paragraph"><a href="haumea.html">Haumea</a> has two satellites - Hiʻiaka and Namaka, both named after Hawaiian deities.</p>
+                    <p class="paragraph"><a href="makemake.html">Makemake</a> has one satellite, refered to as MK2.</p>
                     <p class="paragraph">
                         Other dwarf planets with satellites include <a href="gonggong.html">Gonggong</a> with Xiangliu, <a href="quaoar.html">Quaoar</a> with Weywot, and <a href="orcus.html">Orcus</a> with Vanth.
                     </p>
