--- a/pages/planet.html
+++ b/pages/planet.html
@@ -129,7 +129,7 @@ link: planet
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right h240">
+                    <div class="captionbox right h180">
                         <img class="articleimage" src="../assets/images/planets/saturn.jpg" alt="Saturn">
                         <p class="caption">Saturn</p>
                     </div>
@@ -193,7 +193,7 @@ link: planet
                         Haumea and Makemake were later added to the group of dwarf planets defined by the IAU. 
                         Other astronomers also include other <a href="tno.html">TNOs</a> to the list - <a href="gonggong.html">Gonggong</a>, <a href="quaoar.html">Quaoar</a>, <a href="sedna.html">Sedna</a>, and <a href="orcus.html">Orcus</a>. 
                         These nine are widely refered to as dwarf planets, even though some of them are not proven to be in hydrostatic equilibrium (to be round enough). 
-                        Other objects that might be dwarf planets are Salacia, Varda, Ixion, Gǃkúnǁʼhòmdímà and Varuna.
+                        Other objects that might be dwarf planets are <a href="salacia.html">Salacia</a>, Varda, Ixion, Gǃkúnǁʼhòmdímà and Varuna, though albedo, composition data and density suggest that they are more unlikely to have differentiated.
                     </p>
                 </div>
                 <h2 class="paragraphheader" id="Exoplanets">Exoplanets</h2>
