--- a/pages/pluto.html
+++ b/pages/pluto.html
@@ -21,7 +21,7 @@ link: pluto
                         Seasons on Pluto are very dynamic, as the nitrogen ice can sublime during warmer periods and increase the atmospheric pressure dramatically, allowing for nitrogen to exist in liquid form.
                     </p>
                     <p class="paragraph">
-                        Pluto has five <a href="natural-satellite.html">satellites</a> - Charon, Hydra, Nix, Kerberos, and Styx. 
+                        Pluto has five <a href="natural-satellite.html">satellites</a> - <a href="charon.html">Charon</a>, Hydra, Nix, Kerberos, and Styx. 
                         Charon is so big compared to Pluto, that the barycenter of Pluto lies outside of it and both objects are tidally locked to each other.
                         One mission has visited Pluto - New Horizons.
                     </p>
