--- a/pages/satellites-of-jupiter.html
+++ b/pages/satellites-of-jupiter.html
@@ -46,8 +46,8 @@ link: satellites-of-jupiter
                 </p>
                 <h3 class="paragraphheader" id="InnerMoons">Inner moons</h3>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:187px">
-                        <img class="articleimage" src="../assets/images/natural-satellites/amalthea.jpg" alt="Amalthea" width="185" height="175">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/amalthea.jpg" alt="Amalthea">
                         <p class="caption">Amalthea, the biggest inner moon</p>
                     </div>
                     <p class="paragraph">
@@ -68,7 +68,22 @@ link: satellites-of-jupiter
                         Io, Europa and Ganymede are in a 4:2:1 orbital resonance with each other.
                     </p>
                     <p class="paragraph">
-                        Ganymede is the largest known satellite in the Solar System.
+                        Io is the innermost Galilean moon of Jupiter and is slightly larger than Earth's Moon.
+                        It is volcanically active and has hundreds of volcanoes.
+                        The activity of Io is caused by the gravitational pull of Jupiter on one side and Ganymede and Europa on the other side.
+                        Together these three satellites are in a orbital resonance with each other.
+                        Volcano eruptions can be so powerful that Earth telescopes can see them.
+                    </p>
+                    <p class="paragraph">
+                        Europa, the second closest, is the smallest Galilean moon and is slightly smaller than Earth's Moon.
+                        It is an icy moon with a smooth surface full of dark streaks.
+                        It is speculated that Europa could have a subsurface ocean where extraterrestrial life could exist.
+                        This is similar to Ganymede and Callisto, but there are more evidences showing such ocean on Europa than on the other two moons.
+                        A similar satellite is Saturn's moon <a href="enceladus.html">Enceladus</a>.
+                        The orbiter Europa Clipper by NASA that was launched in 2024 is planned to study the Europan surface.
+                    </p>
+                    <p class="paragraph">
+                        Ganymede, the third Galilean moon, is the largest known satellite in the Solar System.
                         It is larger than the <a href="planet.html">planet</a> Mercury, but is less massive.
                         The Hubble Space Telescope has discovered evidence for underground saltwater ocean.
                         It has a magnetic field, the only satellite known to have such.
@@ -76,37 +91,23 @@ link: satellites-of-jupiter
                         The ongoing ESA mission JUICE is planned to orbit Ganymede and study the satellite.
                     </p>
                     <p class="paragraph">
-                        Callisto is the second biggest of the Galilean moons.
-                        The surface is heavily cratered, covered with craters and white icy spots.
+                        Callisto is the outernmost and the second biggest of the Galilean moons.
+                        The surface is heavily cratered, covered with impact craters and white icy spots.
+                        It has a relatively low albedo, which makes Callisto dark in appearance.
                         The Galileo spacecraft has gathered data from Callisto that shows the possibility of an interior ocean.
                     </p>
-                    <p class="paragraph">
-                        Io is a satellite of Jupiter that is slightly larger than Earth's Moon.
-                        It is volcanically active and has hundreds of volcanoes.
-                        The activity of Io is caused by the gravitational pull of Jupiter on one side and Ganymede and Europa on the other side.
-                        Together these three satellites are in a orbital resonance with each other.
-                        Volcano eruptions can be so powerful that Earth telescopes can see them.
-                    </p>
-                    <p class="paragraph">
-                        Europa is the smallest Galilean moon and is slightly smaller than Earth's Moon.
-                        It is an icy moon with a smooth surface full of dark streaks.
-                        It is speculated that Europa could have a subsurface ocean where extraterrestrial life could exist.
-                        This is similar to Ganymede and Callisto, but there are more evidences showing such ocean on Europa than on the other two moons.
-                        A similar satellite is Saturn's moon <a href="enceladus.html">Enceladus</a>.
-                        The orbiter Europa Clipper by NASA that was launched in 2024 is planned to study the Europan surface.
-                    </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto" width="174" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/io.jpg" alt="Io" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/ganymede.jpg" alt="Ganymede">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/europa.png" alt="Europa" width="180" height="180">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto">
                         </div>
                         <p class="caption">The four Galilean moons - Ganymede, Callisto, Io and Europa</p>
                     </div>
