--- a/pages/satellites-of-neptune.html
+++ b/pages/satellites-of-neptune.html
@@ -45,8 +45,8 @@ link: satellites-of-neptune
                     It is the only <a href="planet.html">planet</a> that has a round moon in an irregular orbit, which means that all of the regular moons are irregularly shaped.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:181.75px">
-                        <img class="articleimage" src="../assets/images/natural-satellites/proteus.jpg" alt="Proteus" width="179.75" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/proteus.jpg" alt="Proteus">
                         <p class="caption">Proteus, the biggest irregularly-shaped moon of Neptune</p>
                     </div>
                     <h3 class="paragraphheader" id="InnerMoons">Inner moons</h3>
@@ -60,8 +60,8 @@ link: satellites-of-neptune
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:180px">
-                        <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton">
                         <p class="caption">Triton</p>
                     </div>
                     <h3 class="paragraphheader" id="Triton">Triton</h3>
