--- a/pages/satellites-of-saturn.html
+++ b/pages/satellites-of-saturn.html
@@ -16,7 +16,7 @@ link: satellites-of-saturn
                     Out of the irregularly-shaped satellite, <a href="hyperion.html">Hyperion</a> is the largest. 
                     There are satellites like Pan and Daphnis that are refered to as shepherd moons.
                     They have distinct equatorial ridges formed from clearing Saturn's rings.
-                    The 250 known irregular moons receie names of Celtic and Inuit gods, and Norse ice giants (with the exception of Phoebe.)
+                    The 250 known irregular moons receie names of Celtic and Inuit gods, and Norse ice giants (with the exception of <a href="phoebe.html">Phoebe</a>.)
                 </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
@@ -43,8 +43,8 @@ link: satellites-of-saturn
                     Saturn's moons can be generally divided into regular and irregular moons, depending on their orbits.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:182px">
-                        <img class="articleimage" src="../assets/images/natural-satellites/hyperion.jpg" alt="Hyperion" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/hyperion.jpg" alt="Hyperion">
                         <p class="caption">Hyperion, the biggest irregularly-shaped Saturnian moon</p>
                     </div>
                     <h3 class="paragraphheader" id="SmallRegularMoons">Small regular moons</h3>
@@ -85,17 +85,17 @@ link: satellites-of-saturn
                         Dione has two trojans, which are also moons of Saturn - Helene and Polydeuces.
                     </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/mimas.jpg" alt="Mimas" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/mimas.jpg" alt="Mimas">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus" width="118" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/enceladus.jpg" alt="Enceladus">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/tethys.jpg" alt="Tethys" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/tethys.jpg" alt="Tethys">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/dione.jpg" alt="Dione" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/dione.jpg" alt="Dione">
                         </div>
                         <p class="caption">Mimas, Enceladus, Tethys, and Dione.</p>
                     </div>
@@ -121,14 +121,14 @@ link: satellites-of-saturn
                         A mountain ridge along the equator is still unexplained, but one suggestion is that it might have been a collapsed ring system.
                     </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/rhea.jpg" alt="Rhea" width="120.5" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/rhea.jpg" alt="Rhea">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/titan.jpg" alt="Dione" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/titan.jpg" alt="Dione">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/iapetus.jpg" alt="Iapetus" width="120" height="120">
+                        <div class="captionbox center h120">
+                            <img class="articleimage" src="../assets/images/natural-satellites/iapetus.jpg" alt="Iapetus">
                         </div>
                         <p class="caption">Rhea, Titan, and Iapetus.</p>
                     </div>
@@ -143,8 +143,8 @@ link: satellites-of-saturn
                     Based on the proximity to Saturn, there are three subgroups - Kiviuq (20 members), Paaliq (sole member), and Siarnaq (15 members). 
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:182px">
-                        <img class="articleimage" src="../assets/images/natural-satellites/phoebe.jpg" alt="phoebe" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/phoebe.jpg" alt="Phoebe">
                         <p class="caption">Phoebe, the biggest moon in the Norse group</p>
                     </div>
                     <h3 class="paragraphheader" id="NorseGroup">Norse group</h3>
