--- a/pages/satellites-of-uranus.html
+++ b/pages/satellites-of-uranus.html
@@ -6,8 +6,8 @@ link: satellites-of-uranus
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:306.5px;">
-                        <img class="articleimage" src="../assets/images/diagrams/uranus-rings.png" alt="Rings of Uranus" width="304.5" height="360">
+                    <div class="captionbox right h360">
+                        <img class="articleimage" src="../assets/images/diagrams/uranus-rings.png" alt="Rings of Uranus">
                         <p class="caption">Location of the inner moons and Miranda. S/2025 U 1 not depicted.</p>
                     </div>
                     <p class="paragraph">
@@ -41,8 +41,8 @@ link: satellites-of-uranus
                     The Uranian satellites can be classified into inner regular, round, and irregular moons.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:182px">
-                        <img class="articleimage" src="../assets/images/natural-satellites/puck.png" alt="Puck" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/puck.png" alt="Puck">
                         <p class="caption">Puck, the biggest irregularly-shaped Uranian moon</p>
                     </div>
                     <h3 class="paragraphheader" id="InnerMoons">Inner moons</h3>
@@ -62,23 +62,23 @@ link: satellites-of-uranus
                         Miranda is the closest to Uranus, followed by Ariel, Umbriel, Titania, and Oberon is the most distant.
                         All of the moons are relatively dark, with Umbriel being the darkest.
                         They are made of rock and ice (except Miranda, which is mostly ice) and feature craters, canyons and scarps.
-                        Miranda is unique, as it features extremely large scarps on it's surface like the 20km deep Verona Rupes.
+                        Miranda is unique, as it features extremely large scarps on it's surface like the 20 km wide and 10-15 km deep Verona Rupes.
                     </p>
                     <div class="imgwrapper">
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/miranda.jpg" alt="Miranda" width="120" height="120">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/miranda.jpg" alt="Miranda">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/ariel.jpg" alt="Ariel" width="120" height="120">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/ariel.jpg" alt="Ariel">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/umbriel.jpg" alt="Umbriel" width="120" height="120">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/umbriel.jpg" alt="Umbriel">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania" width="120" height="120">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/titania.jpg" alt="Titania">
                         </div>
-                        <div class="captionbox center">
-                            <img class="articleimage" src="../assets/images/natural-satellites/oberon.jpg" alt="Oberon" width="120" height="120">
+                        <div class="captionbox center h180">
+                            <img class="articleimage" src="../assets/images/natural-satellites/oberon.jpg" alt="Oberon">
                         </div>
                             <p class="caption">The major moons in order from closest to furthest from Uranus - Miranda, Ariel, Umbriel, Titania, and Oberon</p>
                     </div>
