--- a/pages/saturn.html
+++ b/pages/saturn.html
@@ -116,7 +116,7 @@ link: saturn
                     Out of the irregularly-shaped satellite, <a href="hyperion.html">Hyperion</a> is the largest. 
                     There are satellites like Pan and Daphnis that are refered to as shepherd moons.
                     They have distinct equatorial ridges formed from clearing Saturn's rings.
-                    The 250 known irregular moons receie names of Celtic and Inuit gods, and Norse ice giants (with the exception of Phoebe.)
+                    The 250 known irregular moons receie names of Celtic and Inuit gods, and Norse ice giants (with the exception of <a href="phoebe.html">Phoebe</a>.)
                 </p>
                 <div class="articlediv">
                     <div class="captionbox right">
