--- a/pages/solar-system.html
+++ b/pages/solar-system.html
@@ -8,7 +8,7 @@ link: solar-system
                 <div class="articlediv">
                     <p class="paragraph">
                         The Solar System is the planetary system of the <a href="sun.html">Sun</a>. 
-                        It formed about 4.6 billion years ago with the collapse of a dense region of a molecular cloud, which created the Sun and a protoplanetary disc that eventually formed the orbiting bodies. 
+                        It is located in the Milky Way <a href="galaxy.html">galaxy</a> and formed about 4.6 billion years ago with the collapse of a dense region of a molecular cloud, which created the Sun and a protoplanetary disc that eventually formed the orbiting bodies. 
                         The system features eight known <a href="planet.html">planets</a> that orbit the Sun. 
                         The closest four ones - <a href="mercury.html">Mercury</a>, <a href="venus.html">Venus</a>, <a href="earth.html">Earth</a>, and <a href="mars.html">Mars</a> - are smaller in size and consist mostly of solid materials like rocks and metals, while the outer four - <a href="jupiter.html">Jupiter</a>, <a href="saturn.html">Saturn</a>, <a href="uranus.html">Uranus</a>, and <a href="neptune.html">Neptune</a> - are much bigger in size and are mostly made of hydrogen, helium, or include other compounds that are refered to as volatiles.
                         Apart from planets, the Solar System includes many smaller bodies like <a href="natural-satellite.html">natural satellites</a>, <a href="asteroid.html">asteroids</a>, <a href="comet.html">comets</a>, <a href="centaur.html">centaurs</a>, <a href="tno.html">trans-Neptunian objects</a>, and meteoroids.
@@ -91,7 +91,7 @@ link: solar-system
                     <p class="paragraph">
                         The asteroid belt is a region located between the orbits of Mars and Jupiter filled with millions of rocky bodies called asteroids.
                         These range in size from Ceres, the largest asteroid and a dwarf planet, to small rocks.
-                        Other large asteroids include Vesta, Pallas, and Hygiea.
+                        Other large asteroids include Vesta, <a href="pallas.html">Pallas</a>, and <a href="hygiea.html">Hygiea</a>.
                         The belt is thought to be a remnant of the early Solar System, where the gravitational influence of Jupiter prevented the formation of a planet.
                         The asteroids are spread out over a vast area, with hundreds of thousands of kilometers separating most of them.
                     </p>
