--- a/pages/titan.html
+++ b/pages/titan.html
@@ -6,8 +6,8 @@ link: titan
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/titan.jpg" alt="Titan" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/titan.jpg" alt="Titan">
                         <p class="caption">Titan</p>
                     </div>
                     <p class="paragraph">
@@ -31,8 +31,8 @@ link: titan
                 </p>
                 <h2 class="paragraphheader" id="Discovery">Discovery</h2>
                 <p class="paragraph">
-                    Titan was discovered by Christiaan Huygens in 1655.
-                    Inspired by Galileo's discovery of the <a href="satellites-of-jupiter.html">moons of Jupiter</a>, he constructed his own telescope.
+                    Inspired by Galileo's discovery of the <a href="satellites-of-jupiter.html">moons of Jupiter</a>, Christiaan Huygens constructed his own telescope with a greater magnification.
+                    He discovered Titan in 1655 and later published his observations of Saturn in his Systema Saturnium.
                 </p>
                 <h2 class="paragraphheader" id="OrbitAndRotation">Orbit and rotation</h2>
                 <p class="paragraph">
@@ -62,8 +62,8 @@ link: titan
                     The presence of a subsurface ocean makes Titan a compelling candidate in the search for extraterrestrial life.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:254px">
-                        <img class="articleimage" src="../assets/images/features/ligeia-mare.jpg" alt="Ligeia mare" width="252" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/features/ligeia-mare.jpg" alt="Ligeia mare">
                         <p class="caption">Ligeia Mare, second largest sea on Titan</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Surface">Surface</h3>
@@ -103,8 +103,8 @@ link: titan
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:244.5px">
-                        <img class="articleimage" src="../assets/images/other/titan-haze.jpg" alt="Titan haze" width="242.5" height="290">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/other/titan-haze.jpg" alt="Titan haze">
                         <p class="caption">Titan's orange and blue haze seen by Voyager 1</p>
                     </div>
                     <h3 class="paragraphheader" id="Atmosphere">Atmosphere</h3>
@@ -130,8 +130,8 @@ link: titan
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:152px">
-                        <img class="articleimage" src="../assets/images/other/huygens-titan-surface.jpg" alt="Surface of Titan" width="150" height="299">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/other/huygens-titan-surface.jpg" alt="Surface of Titan">
                         <p class="caption">First and only picture of the surface of Titan, taken by the Huygens lander.</p>
                     </div>
                     <h2 class="paragraphheader" id="Exploration">Exploration</h2>
