--- a/pages/triton.html
+++ b/pages/triton.html
@@ -6,8 +6,8 @@ link: triton
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton" width="240" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/triton.jpg" alt="Triton">
                         <p class="caption">Triton</p>
                     </div>
                     <p class="paragraph">
@@ -65,8 +65,8 @@ link: triton
                     The mantle and the crust are mostly water ice and are heated mostly by radioactive decay in the core to create a liquid subsurface ocean.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:189.5px">
-                        <img class="articleimage" src="../assets/images/features/cantaloupe-terrain.jpg" alt="Cantaloupe terrain" width="187.5" height="183.75">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/features/cantaloupe-terrain.jpg" alt="Cantaloupe terrain">
                         <p class="caption">"Cantaloupe terrain". The cross is formed by Slidr and Tano Sulci.</p>
                     </div>
                     <h3 class="paragraphsubheader" id="Surface">Surface</h3>
@@ -86,8 +86,8 @@ link: triton
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:189.5px">
-                        <img class="articleimage" src="../assets/images/features/ruach-planitia.jpg" alt="Ruach and Tuonela Planitia" width="187.5" height="189">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/features/ruach-planitia.jpg" alt="Ruach and Tuonela Planitia">
                         <p class="caption">Ruach (center), Tuonela (left) Planitiae, and Leviathan Patera (bottom right)</p>
                     </div>
                     <p class="paragraph">
@@ -105,8 +105,8 @@ link: triton
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right" style="width:189.5px">
-                        <img class="articleimage" src="../assets/images/features/uhlanga-regio.jpg" alt="South pole" width="187.5" height="189">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/features/uhlanga-regio.jpg" alt="South pole">
                         <p class="caption">South pole. Dark spots are dust from geysers.</p>
                     </div>
                     <p class="paragraph">
