--- a/pages/uranus.html
+++ b/pages/uranus.html
@@ -122,7 +122,7 @@ link: uranus
                         The biggest one is <a href="titania.html">Titania</a>, followed by <a href="oberon.html">Oberon</a>, <a href="umbriel.html">Umbriel</a>, <a href="ariel.html">Ariel</a>, and the smallest - <a href="miranda.html">Miranda</a>.
                         All of the moons are relatively dark, with Umbriel being the darkest.
                         They are made of rock and ice and feature craters, canyons and scarps.
-                        Miranda is unique, as it features extremely large scarps on it's surface like the 20km deep Verona Rupes.
+                        Miranda is unique, as it features extremely large scarps on it's surface like Verona Rupes.
                     </p>
                     <p class="paragraph">
                         The other 24 moons are divided into inner and irregular.
