--- a/pages/callisto.html
+++ b/pages/callisto.html
@@ -6,8 +6,8 @@ link: callisto
 ---
 
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto" width="232" height="240">
+                    <div class="captionbox right h240">
+                        <img class="articleimage" src="../assets/images/natural-satellites/callisto.jpg" alt="Callisto">
                         <p class="caption">Callisto</p>
                     </div>
                     <p class="paragraph">
@@ -66,8 +66,8 @@ link: callisto
                     Beneath the surface Callisto may contain a liquid water ocean, just like the other icy moons of Jupiter - Ganymede and Europa.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/features/valhalla-crater.jpg" alt="Valhalla crater" width="320" height="191">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/features/valhalla-crater.jpg" alt="Valhalla crater">
                         <p class="caption">Valhalla crater and its concentric rings</p>
                     </div>
                     <h3 class="paragraphsubheader" id="ExternalStructure">External structure</h3>
