--- a/pages/satellites-of-mars.html
+++ b/pages/satellites-of-mars.html
@@ -40,8 +40,8 @@ link: satellites-of-mars
                     Several possibilities exist, like coalescing from a Martian ring, or being a surviving piece of that event.
                 </p>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos" width="191.25" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/phobos.jpg" alt="Phobos">
                         <p class="caption">Phobos</p>
                     </div>
                     <h2 class="paragraphheader" id="Phobos">Phobos</h2>
@@ -55,8 +55,8 @@ link: satellites-of-mars
                     </p>
                 </div>
                 <div class="articlediv">
-                    <div class="captionbox right">
-                        <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos" width="180" height="180">
+                    <div class="captionbox right h180">
+                        <img class="articleimage" src="../assets/images/natural-satellites/deimos.jpg" alt="Deimos">
                         <p class="caption">Deimos</p>
                     </div>
                     <h2 class="paragraphheader" id="Deimos">Deimos</h2>
