--- a/pages/star.html
+++ b/pages/star.html
@@ -14,7 +14,7 @@ link: star
                         A star is a celestial body that is massive enough to sustain thermonuclear fusion.
                         It consists of plasma held by it's gravity and emits light. 
                         The <a href="sun.html">Sun</a> is the closest star to <a href="earth.html">Earth</a>. 
-                        There are an estimated 10^22 to 10^24 stars in the universe, but only around 4,000 can be seen with the naked eye.
+                        There are an estimated 10^22 to 10^24 stars in the <a href="universe.html">universe</a>, but only around 4,000 can be seen with the naked eye.
                     </p>
                     <p class="paragraph">
                         Stars are formed when a nebula collapses by it's own gravity. 
